item 30 ~ 33 예제 및 문서